views/MutatingWebhookConfiguration.admissionregistration.k8s.io.yaml
---
kind: "MutatingWebhookConfiguration"
api_family: "admissionregistration.k8s.io"
default_command: "mutatingwebhookconfigurations"
command:
  - "mwhcs"
  - "mwhc"
listview:
  name: "Mutating Webhook Configurations"
  group: "API & Extendability"
  field_indexes:
    Normal:
      fields: ["name", "controller", "webhook_count", "age"]
  fields:
    controller:
      header: "Controller:"
      paths:
        - path: "metadata#ownerReferences"
          pathtype: "items"
          subpaths:
            - "kind"
            - "apiVersion"
            - "name"
          when:
            - key: "controller"
              eq: true
          type: ["kind", "api_group", "name"]
          default: ["<none>"]
      formatter: "list"
      formatting:
        field_colors:
          - type: "kind"
          - type: "api_group"
          - type: "generic"
        field_separators:
          - type: "kind_api_group"
          - type: "kind"
    webhook_count:
      header: "Webhooks:"
      path: "webhooks"
      type: "len"
      formatter: "numerical"
      align: "right"
  actions:
    actionlist:
      "Delete resource":
        description: "Delete resource"
        category: "Resource Level"
        confirm: true
        actionfunc: "delete_resource"
      "Force delete resource":
        description: "Delete resource (No grace period)"
        category: "Resource Level"
        confirm: true
        actionfunc: "delete_resource"
        actionfunc_args:
          force: true
infoview:
  name: "Mutating Webhook Configuration Info"
  infopad:
    row_indexes:
      Normal:
        fields: ["controller"]
    rows:
      controller:
        header: [["C", ["main", "infoheader_shortcut"]],
                 ["ontroller:", ["main", "infoheader"]]]
        paths:
          - path: "metadata#ownerReferences"
            pathtype: "items"
            subpaths:
              - "kind"
              - "apiVersion"
              - "name"
            when:
              - key: "controller"
                eq: true
            type: ["kind", "api_group", "name"]
            default: ["<none>"]
        formatter: "list"
        formatting:
          field_colors:
            - type: "kind"
            - type: "api_group"
            - type: "generic"
          field_separators:
            - type: "kind_api_group"
            - type: "kind"
  listpad:
    on_activation:
      call: "resourceinfodispatch"
      kind: "__MutatingWebhook"
      api_family: "admissionregistration.k8s.io"
    listgetter: "listgetter_path"
    listgetter_args:
      path: "webhooks"
    infogetter: "generic_infogetter"
    field_indexes:
      Normal:
        fields: ["name", "admission_review_versions", "timeout",
                 "failure_policy", "match_policy"]
    fields:
      admission_review_versions:
        header: "Admission Review Versions:"
        path: "admissionReviewVersions"
        default: ["<unset>"]
        type: "raw"
        formatter: "list"
        formatting:
          field_colors:
            - type: "version"
      failure_policy:
        header: "Failure Policy:"
        path: "failurePolicy"
        default: "<unset>"
        type: "str"
      match_policy:
        header: "Match Policy:"
        path: "matchPolicy"
        default: "<unset>"
        type: "str"
      name:
        header: "Name:"
        path: "name"
        default: "<unset>"
        type: "str"
      timeout:
        header: "Timeout:"
        path: "timeoutSeconds"
        default: "<unset>"
        type: "int"
        formatter: "numerical"
        formatting:
          unit: "s"
        align: "right"
  shortcuts:
    "Open controller":
      key: "c"
      modifier: "shift"
      read_only: true
      helptext: "Open info page for controller"
      action: "call"
      action_call: "resourceinfodispatch_with_lookup"
      action_args:
        _pass_obj: true
        namespace_path: "metadata#namespace"
        owner_reference_path: "metadata#ownerReferences"
